2001-10-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (Init): corrected loading of rcfile when it was in a
	path including spaces. (siltberg)
	(About): clarified CVS info in about box.

	* docs/start.html: correct old refs to TKCON var.

2001-09-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (ExpandPathname): recognize NT as a case *in*sensitive
	file system for pathname expansion.

2001-08-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (InitSlave): propagate auto_path from master to slave.

2001-08-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (NewSocket, NewDisplay): when nothing is specified,
	just return.
	(Display): fixed connecting to interps on other displays.

2001-08-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/bindings.html: noted ^r/^s change. 

	* tkcon.tcl (Event): changed event ^r/^s searching to search for
	any matching substring, and blink the substring.
	Added statusbar, default off (not much in status yet).

2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (EvalNamespace): fixed to work when attached to a
	foreign interpreter. [Bug #453431]
	Added fix that allows access to Tk privates in 8.4.  Still needs
	a long-term fix. [Bug #450865] (porter)

2001-08-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (EvalCmd): protected against non-existent
	tkPriv(mouseMoved) variable

2001-07-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (RetrieveFilter, RetrieveAuthentication): added
	support for retrieving latest tkcon via a proxy. (Thoyts)

2001-07-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon): made tkcon console return whatever result it
	received.  Fixed Bug #438281.

2001-06-20  Jeff Hobbs  <jeffh@ActiveState.com>

	TKCON 2.2 RELEASE

	* README.txt:
	* index.html:
	* docs/index.html: updated for 2.2 release

	* tkcon.tcl (InitUI): moved wm protocol inside check to not run
	under plugin.
	(::tkcon::Retrieve): added a new method to allow tkcon to retrieve